chores: simplify Makefile
