# docs/swagger.json
@@ -15,7 +15,7 @@
     "paths": {
         "/tasks": {
             "get": {
-                "description": "Find all tasks",
+                "description": "Get all tasks",
                 "consumes": [
                     "application/json"
                 ],
@@ -25,7 +25,7 @@
                 "tags": [
                     "tasks"
                 ],
-                "summary": "Find all tasks",
+                "summary": "Get all tasks",
                 "parameters": [
                     {
                         "type": "integer",
@@ -88,7 +88,7 @@
         },
         "/tasks/{id}": {
             "get": {
-                "description": "Find all tasks by user id",
+                "description": "Get task by id",
                 "consumes": [
                     "application/json"
                 ],
@@ -98,29 +98,13 @@
                 "tags": [
                     "tasks"
                 ],
-                "summary": "Find all tasks by user id",
+                "summary": "Get task by id",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "user id",
+                        "description": "task id",
                         "name": "id",
                         "in": "path",
-                        "required": true
-                    },
-                    {
-                        "type": "integer",
-                        "default": 1,
-                        "description": "offset",
-                        "name": "offset",
-                        "in": "query",
-                        "required": true
-                    },
-                    {
-                        "type": "integer",
-                        "default": 15,
-                        "description": "limit",
-                        "name": "limit",
-                        "in": "query",
                         "required": true
                     }
                 ],
@@ -128,7 +112,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/api.MultipleDataResp-task_Task"
+                            "$ref": "#/definitions/api.SingleDataResp-task_Task"
                         }
                     }
                 }
@@ -198,6 +182,54 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/api.SingleDataResp-task_Task"
+                        }
+                    }
+                }
+            }
+        },
+        "/tasks/{userId}": {
+            "get": {
+                "description": "Get all tasks by user id",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "tasks"
+                ],
+                "summary": "Get all tasks by user id",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "user id",
+                        "name": "userId",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "default": 1,
+                        "description": "offset",
+                        "name": "offset",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "default": 15,
+                        "description": "limit",
+                        "name": "limit",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/api.MultipleDataResp-task_Task"
                         }
                     }
                 }
